<resources>
    <string name="app_name">Sellet</string>

    <string name="firebase_status_fmt">Firebase UID: %s</string>

    <string name="hint_user_id">User ID</string>
    <string name="get_custom_token">Get Token</string>
    <string name="sign_in">Connexion</string>
    <string name="create_account">Inscription</string>
    <string name="send_link">Send Link</string>
    <string name="sign_out">Sign Out</string>
    <string name="verify_email">Verify</string>
    <string name="disconnect">Disconnect</string>
    <string name="loading">Loading…</string>
    <string name="custom_token">Custom Token</string>
    <string name="signed_in">Signed In</string>
    <string name="signed_out">Signed Out</string>
    <string name="token_null">Token: null</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Mot de Passe</string>
    <string name="hint_search">Rechercher un article...</string>
    <string name="hint_title">ex: Masque FFP1 Supreme</string>
    <string name="connect_text">Se Connecter</string>
    <string name="register_text">S\'inscrire</string>
    <string name="no_acc_text">Pas encore inscrit ?</string>
    <string name="create_acc_text"><u>Créez un compte</u></string>
    <string name="already_acc_text">Déjà inscrit ?</string>
    <string name="connect_acc_text"><u>Connectez-vous</u></string>

    <string name="added_to_favorites"><u>Ajouté aux favoris</u></string>
    <string name="removed_from_favorites"><u>Retiré des favoris</u></string>
    <string name="name_updated"><u>Nom modifié</u></string>
    <string name="product_published"><u>Article publié</u></string>
    <string name="uploading_pictures"><u>Ajout des images...</u></string>

    <string name="auth_failed">Authentication failed</string>

    <string name="emailpassword_status_fmt">Email User: %1$s (verified: %2$b)</string>
    <string name="emailpassword_title_text">Email and Password</string>

    <string name="reload">Reload</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="sellet">sellet</string>
    <string name="profil">Profil</string>
    <string name="profile">Profil</string>
    <string name="edit">Modifier mon profil</string>
    <string name="chevron">chevron</string>
    <string name="vendre">Vendre un article</string>
    <string name="add_images">+ Ajouter des photos</string>
    <string name="titre">Titre</string>
    <string name="description">Description</string>
    <string name="price">Prix</string>
    <string name="hint_desc">ex: Porté quelques fois</string>
    <string name="hint_price">0.00€</string>
    <string name="add_product">Mettre en vente</string>
    <string name="product_preview">Product Preview</string>
</resources>
