<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">
<LinearLayout
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/comfortaa_bold"
        android:text="@string/vendre"
        android:textColor="#EEEEEE"
        android:textSize="24sp"
        android:gravity="center_horizontal"
        android:layout_marginTop="20dp"/>

    <com.synnapps.carouselview.CarouselView
        android:id="@+id/carousel"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:background="@drawable/border"
        android:layout_marginTop="20dp"/>

    <Button
        android:id="@+id/addImages"
        android:layout_width="170dp"
        android:layout_height="35dp"
        android:layout_gravity="center"
        android:layout_marginTop="5dp"
        android:background="@drawable/add_button"
        android:fontFamily="@font/comfortaa"
        android:text="@string/add_images"
        android:textAllCaps="false"
        android:textColor="#00ADB5" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginTop="20dp">

        <TextView
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/comfortaa_bold"
            android:text="@string/titre"
            android:textColor="#EEEEEE"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/title_edit"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:fontFamily="@font/comfortaa"
            android:hint="@string/hint_title"
            android:textColor="#80EEEEEE"
            android:textSize="11sp"
            android:backgroundTint="@color/primary50Text"/>

        <TextView
            android:id="@+id/desc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/comfortaa_bold"
            android:text="@string/description"
            android:textColor="#EEEEEE"
            android:textSize="18sp"
            android:layout_marginTop="15dp"/>

        <EditText
            android:id="@+id/desc_edit"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:fontFamily="@font/comfortaa"
            android:hint="@string/hint_desc"
            android:textColor="#80EEEEEE"
            android:textSize="11sp"
            android:backgroundTint="@color/primary50Text"/>

        <Spinner
            android:id="@+id/categories"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="#EEEEEE"
            android:layout_marginStart="-8dp"/>

        <Spinner
            android:id="@+id/states"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:entries="@array/item_states"
            android:backgroundTint="#EEEEEE"
            android:layout_marginStart="-8dp"/>

        <TextView
            android:id="@+id/price"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/comfortaa_bold"
            android:text="@string/price"
            android:textColor="#EEEEEE"
            android:textSize="18sp"
            android:layout_marginTop="15dp"/>

        <EditText
            android:id="@+id/price_edit"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:backgroundTint="@color/primary50Text"
            android:fontFamily="@font/comfortaa"
            android:hint="@string/hint_price"
            android:inputType="number"
            android:textColor="#80EEEEEE"
            android:textSize="11sp" />

        <Button
            android:id="@+id/addButton"
            android:layout_width="200dp"
            android:layout_height="45dp"
            android:layout_marginTop="15dp"
            android:background="@drawable/login_button"
            android:fontFamily="@font/comfortaa_bold"
            android:text="@string/add_product"
            android:textColor="#EEEEEE"
            android:textSize="12sp"
            android:layout_gravity="center"/>


    </LinearLayout>

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="94dp"
        android:layout_height="56dp"
        android:layout_gravity="center"
        android:contentDescription="@string/sellet"
        app:srcCompat="@drawable/logoandtxt" />

</LinearLayout>
    </ScrollView>