<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/register_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#222831"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:weightSum="4"
    android:paddingTop="100dp">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="136dp"
        android:layout_height="56dp"
        app:srcCompat="@drawable/logo" />

    <TextView
        android:id="@+id/registerText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:fontFamily="@font/comfortaa_bold"
        android:text="@string/register_text"
        android:textColor="#EEEEEE"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/titleText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/emailpassword_title_text"
        android:visibility="invisible" />

    <TextView
        android:id="@+id/status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/signed_out"
        android:visibility="invisible" />

    <TextView
        android:id="@+id/detail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        tools:text="Firebase User ID: 123456789abc" />

    <EditText
        android:id="@+id/registerEmail"
        android:layout_width="300dp"
        android:layout_height="45dp"
        android:background="@drawable/login_edit_text"
        android:drawableStart="@drawable/ic_username"
        android:fontFamily="@font/comfortaa"
        android:hint="@string/hint_email"
        android:inputType="textEmailAddress"
        android:textColor="#80EEEEEE"
        android:textSize="15sp" />

    <EditText
        android:id="@+id/registerPassword"
        android:layout_width="300dp"
        android:layout_height="45dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/login_edit_text"
        android:drawableStart="@drawable/ic_password"
        android:hint="@string/hint_password"
        android:inputType="textPassword"
        android:textColor="#80EEEEEE"
        android:textSize="15sp" />

    <Button
        android:id="@+id/registerButton"
        android:layout_width="300dp"
        android:layout_height="45dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/login_button"
        android:fontFamily="@font/comfortaa_bold"
        android:text="@string/create_account"
        android:textColor="#EEEEEE"
        android:textSize="12sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="15dp"
        android:gravity="center_horizontal"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/alreadyAccText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/comfortaa"
            android:text="@string/already_acc_text"
            android:textColor="#EEEEEE" />

        <TextView
            android:id="@+id/connectText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5sp"
            android:fontFamily="@font/comfortaa_bold"
            android:text="@string/connect_acc_text"
            android:textColor="#EEEEEE"
            android:onClick="onClick"
            android:clickable="true"/>

    </LinearLayout>

    <FrameLayout
        android:id="@+id/register_fragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>

</LinearLayout>