<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="30dp">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/profile_image"
            android:layout_width="50dp"
            android:layout_height="65dp"
            android:layout_marginStart="50dp"
            android:contentDescription="@string/profile"
            android:src="@drawable/logo"
            app:civ_border_color="#EEEEEE"
            app:civ_border_width="2dp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:orientation="vertical"
            android:gravity="center_vertical">

            <TextView
                android:id="@+id/profile"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/comfortaa_bold"
                android:text="@string/profile"
                android:textColor="#EEEEEE"
                android:layout_marginStart="20dp"/>

            <TextView
                android:id="@+id/modifier"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:fontFamily="@font/comfortaa"
                android:text="@string/edit"
                android:textColor="#80EEEEEE"
                android:textSize="12sp" />
        </LinearLayout>

        <ImageView
            android:id="@+id/imageView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:contentDescription="@string/chevron"
            app:srcCompat="@drawable/ic_chevron_right_black_24dp" />

    </LinearLayout>
</LinearLayout>